crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__multi_type_string_integer.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"type\":[\"string\",\"integer\"]}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Number(n) => jsonschema::__private::types::is_integer(n),
            serde_json::Value::String(_) => true,
            _ => false,
        }
