crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__multiple_of_bigfrac.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"multipleOf\":0.1,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Number(n) => {
                jsonschema::__private::numeric::check_compiled_multiple_of(n, "0.1")
            }
            _ => false,
        }
