crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__multiple_of_bigint.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"multipleOf\":18446744073709551616,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Number(n) => {
                jsonschema::__private::numeric::check_compiled_multiple_of(
                    n,
                    "18446744073709551616",
                )
            }
            _ => false,
        }
