crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__not.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"not\":{\"type\":\"string\"}}"
expression: is_valid_body(schema)
---
!(instance.is_string())
