crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__not_false.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"not\":false}"
expression: is_valid_body(schema)
---
!(false)
