crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__not_true.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"not\":true}"
expression: is_valid_body(schema)
---
false
