crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__object_dependent_required.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"dependentRequired\":{\"a\":[\"b\"]},\"properties\":{\"a\":{\"type\":\"integer\"}},\"type\":\"object\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                (if obj.contains_key("a") { obj.contains_key("b") } else { true })
                    && ({
                        obj.iter()
                            .all(|(key, instance)| {
                                let key_str = key.as_str();
                                match key_str {
                                    "a" => {
                                        match instance {
                                            serde_json::Value::Number(n) => {
                                                jsonschema::__private::types::is_integer(n)
                                            }
                                            _ => false,
                                        }
                                    }
                                    _ => true,
                                }
                            })
                    })
            }
            _ => false,
        }
